# aqwdex

./: .gitignore  Cargo.toml  NEW-DATA-AI.md  README.md  index.html  main-24c20dc0f3ae6317.js  main-24c20dc0f3ae6317_bg.wasm  main-4c3d7c7834ce8659_bg.wasm  main-53bcecb552ca3fc6.js  main-53bcecb552ca3fc6_bg.wasm  main-5c67085f4a24b77f.js  main-5c67085f4a24b77f_bg.wasm  main-7b2d24f97a531f6a.js  main-7b2d24f97a531f6a_bg.wasm  main-a5b23fd28a133599_bg.wasm  main-c320881ce3dc5bf8.js  main-c320881ce3dc5bf8_bg.wasm  main-c9fec51cfe6adb4b.js  main-c9fec51cfe6adb4b_bg.wasm  main-cbfd82f4a3714de_bg.wasm  main-d6b1db3e4f9e4e64.js  main-d6b1db3e4f9e4e64_bg.wasm  main-d6f7c9cda4a630b1.js  main-d6f7c9cda4a630b1_bg.wasm  main-f2299e40f5f337e8.js  main-f2299e40f5f337e8_bg.wasm
.github/workflows/: deploy.yml  sync.yml
backend/: Cargo.toml  test.py
backend/src/: damage.rs  enemy.rs  error.rs  gear.rs  lib.rs  player.rs
main/: Cargo.toml  index.html
main/src/: macros.rs  main.rs
main/src/app/: app.rs  enh_card.rs  mod.rs  monster.rs  player.rs  storage.rs
main/src/app/class_info/: buffs.rs  build_manager.rs  class.rs  dps.rs  enemy.rs  enemy_skill.rs  enhancement_picker.rs  mod.rs  passive.rs  skills.rs  stats.rs
main/static/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
static/: style.css
