[package]
name = "main"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
yew = {version = "0.23.0", features = ["csr"]}
backend = { path="../backend"}
web-sys = { version = "0.3.82"}
strum = "0.28.0"
gloo-console = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
